discussion/kv_engine/162348/162348_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Make KVStore::getBySeqno and getCollectionsManifestUid const

So that we can make the backfill usage use the RO kvstore.

Change-Id: Ibaabcfbfa426e71c73115fac8d4d32f5f1427341

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-27 13:58:34.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-27 14:32:10.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34426/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34426/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40451/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(495): error C2679: binary "=": no operator found which takes a right-hand operand of type "EventuallyPersistentEngine *" (or there is no acceptable conversion) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40451/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12877/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41: error: no viable overloaded "=" [clang-diagnostic-error]
    configuration.magmaCfg.ExecutionEnv = currEngine;
                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_pair.h:390:7: note: candidate function not viable: no known conversion from "EventuallyPersistentEngine *" to "const std::pair<void *, int>" for 1st argument
      operator=(typename conditional<
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_pair.h:401:7: note: candidate function not viable: no known conversion from "EventuallyPersistentEngine *" to "std::pair<void *, int>" for 1st argument
      operator=(typename conditional<
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_pair.h:418:2: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "EventuallyPersistentEngine *"
        operator=(const pair<_U1, _U2>& __p)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_pair.h:430:2: note: candidate template ignored: could not match "pair<type-parameter-0-0, type-parameter-0-1>" against "EventuallyPersistentEngine *"
        operator=(pair<_U1, _U2>&& __p)
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:496:51: error: no viable overloaded "=" [clang-diagnostic-error]
    configuration.magmaCfg.SwitchExecutionEnvFunc =
                                                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:396:7: note: candidate function not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13)" to "const std::function<std::pair<void *, int> (std::pair<void *, int>)>" for 1st argument
      operator=(const function& __x)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:414:7: note: candidate function not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13)" to "std::function<std::pair<void *, int> (std::pair<void *, int>)>" for 1st argument
      operator=(function&& __x) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:428:7: note: candidate function not viable: no known conversion from "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13)" to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      operator=(nullptr_t) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:457:2: note: candidate template ignored: requirement "_Callable<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13), std::__invoke_result<(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13) &, std::pair<void *, int> > >::value" was not satisfied [with _Functor = (lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13)]
        operator=(_Functor&& __f)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:466:2: note: candidate template ignored: could not match "reference_wrapper<type-parameter-0-0>" against "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:497:13)"
        operator=(reference_wrapper<_Functor> __f) noexcept
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12877/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12877/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15288/ : FAILURE

Compile error at [2021-09-27T14:24:47.843Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13633/ : FAILURE

Compile error at [2021-09-27T14:26:22.061Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13633/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2509/ : FAILURE

Compile error at [2021-09-27T14:23:04.322Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2509/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2543/ : FAILURE

Compile error at [2021-09-27T14:25:44.639Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:43:
error: no match for ?operator=? (operand types are ?magma::Magma::ExecutionEnvironment? {aka ?std::pair<void*, int>?} and ?EventuallyPersistentEngine*?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2543/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14746/ : FAILURE

Compile error at [2021-09-27T14:28:17.223Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:43:
error: no match for ?operator=? (operand types are ?magma::Magma::ExecutionEnvironment? {aka ?std::pair<void*, int>?} and ?EventuallyPersistentEngine*?)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14746/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22760/ : FAILURE

Compile error at [2021-09-27T14:27:51.483Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:495:41:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22760/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11667/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14486/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
